--- a/_notebooks/2020-09-19-baseball_project.ipynb
+++ b/_notebooks/2020-09-19-baseball_project.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "This is the first in a blog series, written in jupyter notebooks, which will show you how to build a program that predicts the outcome of MLB games. We'll be using our web scraping and machine learning skills to build a model that outperforms the sports books.\n",
     "\n",
-    "> Warning: Web scraping is dependant on other people's web pages. If they change their site, this blog's code will break. Don't expect the code presented here to work forever."
+    "> Important: Web scraping is dependant on other people's web pages. If they change their site, this blog's code will break. Don't expect the code presented here to work forever."
    ],
    "metadata": {
     "collapsed": false
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -93,17 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-09-19 22:14:58.829986 2019-05-02 500\n",
-      "2020-09-19 22:15:26.848715 2019-06-08 1000\n",
-      "2020-09-19 22:15:54.144147 2019-07-18 1500\n",
-      "2020-09-19 22:16:23.091523 2019-08-24 2000\n",
-      "2020-09-19 22:16:53.807905 2019-10-03 2500\n",
+      "2020-09-19 22:27:04.916961 2019-05-02 500\n",
+      "2020-09-19 22:27:34.926041 2019-06-08 1000\n",
+      "2020-09-19 22:28:03.898110 2019-07-18 1500\n",
+      "2020-09-19 22:28:33.321147 2019-08-24 2000\n",
+      "2020-09-19 22:29:04.107770 2019-10-03 2500\n",
       "Done! Games downloaded: 2533\n"
      ]
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -304,9 +304,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The graph above tells us several things about the calibration of the casino's predictions. The reliability curve clearly shows that if the casino says the home team has a 40% chance of winning, over the course of the season very near 40% of those teams will win. The histogram below shows what portion of the games fall into each bucket.\n",
+    "The graph above tells us several things about the calibration of the casino's predictions. The reliability curve clearly shows that the casino is highly calibrated. Interestingly, it looks like the blue line is shifted down slightly from the \"perfectly calibrated\" line. It would be a better fit if it was 0.05 higher. This may account for the house advantage.\n",
     "\n",
-    "A metric well suited for calibration measurement is the [Brier Score](https://en.wikipedia.org/wiki/Brier_score), which I'll be using to measure the model effectiveness going forward. Beating 0.399 is the target."
+    "The histogram below shows what portion of the games fall into each bin. We see a slight predicted advantage to the home team, with more than 50% of the observations above the 50% mark. Otherwise it looks pretty normally distributed.\n",
+    "\n",
+    "A metric well suited for calibration measurement is the [Brier Score](https://en.wikipedia.org/wiki/Brier_score), which I'll be using to measure the model effectiveness going forward. Getting a model that scores less than 0.3994 is the target."
    ],
    "metadata": {
     "collapsed": false,
