I can't stop editing...

--- a/_notebooks/2020-09-20-baseball_project.ipynb
+++ b/_notebooks/2020-09-20-baseball_project.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -93,17 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-09-20 07:06:15.530599 2019-05-02 500\n",
-      "2020-09-20 07:06:44.327909 2019-06-08 1000\n",
-      "2020-09-20 07:07:11.075344 2019-07-18 1500\n",
-      "2020-09-20 07:07:38.829703 2019-08-24 2000\n",
-      "2020-09-20 07:08:07.881623 2019-10-03 2500\n",
+      "2020-09-20 09:18:42.373122 2019-05-02 500\n",
+      "2020-09-20 09:19:31.667990 2019-06-08 1000\n",
+      "2020-09-20 09:20:01.571727 2019-07-18 1500\n",
+      "2020-09-20 09:20:31.480630 2019-08-24 2000\n",
+      "2020-09-20 09:21:05.637996 2019-10-03 2500\n",
       "Done! Games downloaded: 2533\n"
      ]
     }
@@ -146,8 +146,43 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Here's what that data looks like. You can see the moneyline was negative, meaning that the home team was favored. But the home team lost, so the prediction from the casinos was inaccurate in this case."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'home_moneyline': '-155',\n 'date': '2019-03-20 05:35:00',\n 'home_score': '7',\n 'away_score': '9'}"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game_data[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Sportsbook Accuracy\n",
-    "Let's see how the sportsbook did in all these games we just downloaded."
+    "Let's see how the sportsbook did in all the games we just downloaded."
    ],
    "metadata": {
     "collapsed": false
@@ -155,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -167,8 +202,13 @@
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# the actual outcome of the game, true if the the home team won\n",
     "outcomes = []\n",
+    "# predictions derived from moneyline odds. True if the home team was the favorite\n",
     "predictions = []\n",
+    "# probability the home team will win, derived from moneyline odds\n",
+    "# derived from formulas at https://www.bettingexpert.com/academy/advanced-betting-theory/odds-conversion-to-percentage\n",
     "probabilities = []\n",
     "\n",
     "for d in game_data:\n",
@@ -184,8 +224,7 @@
     "        # but we'll exclude them from our calculations\n",
     "        continue\n",
     "\n",
-    "    # convert moneyline odds ot their implied pprobabilities\n",
-    "    # https://www.bettingexpert.com/academy/advanced-betting-theory/odds-conversion-to-percentage\n",
+    "    # convert moneyline odds ot their implied probabilities\n",
     "    if moneyline<0:\n",
     "        probabilities.append(-moneyline/(-moneyline + 100))\n",
     "    elif moneyline>100:\n",
@@ -208,7 +247,7 @@
    "source": [
     "That's it, right? We need a model that is better than 60% accurate.\n",
     "\n",
-    "It's not so simple if you plan to use this data for betting. If we really want to make money, we would like to know if we think the odds of a team winning are better or worse that what the sportsbook thinks they are. Then we'd be able to use some sort of [expected value calculation](https://en.wikipedia.org/wiki/Expected_value) to determine if the bet is profitable."
+    "If you plan to use this data for betting, you should have more than a win/loss prediction. To really make money, we would like to know if we think the odds of a team winning are better or worse that what the sportsbook thinks they are. Then we'd be able to use some sort of [expected value calculation](https://en.wikipedia.org/wiki/Expected_value) to determine if the bet is profitable."
    ],
    "metadata": {
     "collapsed": false
@@ -226,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -301,7 +340,7 @@
     "\n",
     "The histogram below shows what portion of the games fall into each bin. We see a slight predicted advantage to the home team, with more than 50% of the observations above the 50% mark. Otherwise it looks pretty normally distributed.\n",
     "\n",
-    "A metric well suited for calibration measurement is the [Brier Score](https://en.wikipedia.org/wiki/Brier_score), which I'll be using to measure the model effectiveness going forward. Getting a model that scores less than 0.2358 is the target."
+    "Above, I said the reliability curve looks highly calibrated. If we are to judge our own efforts against the sportsbook, we can't just be eyeballing this graph all the time. A metric would be nice. One metric that is suited for calibration measurement is the [Brier Score](https://en.wikipedia.org/wiki/Brier_score), which I'll be using to measure the model effectiveness going forward. Getting a model that scores less than 0.2358 is the target."
    ],
    "metadata": {
     "collapsed": false,
