--- a/_notebooks/2020-09-20-baseball_project.ipynb
+++ b/_notebooks/2020-09-20-baseball_project.ipynb
@@ -99,11 +99,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-09-20 10:19:00.509981 2019-05-02 500\n",
-      "2020-09-20 10:19:33.394675 2019-06-08 1000\n",
-      "2020-09-20 10:20:03.695489 2019-07-18 1500\n",
-      "2020-09-20 10:20:31.648972 2019-08-24 2000\n",
-      "2020-09-20 10:21:01.202291 2019-10-03 2500\n",
+      "2020-09-21 13:43:11.235271 2019-05-02 500\n",
+      "2020-09-21 13:43:48.030736 2019-06-08 1000\n",
+      "2020-09-21 13:44:16.474179 2019-07-18 1500\n",
+      "2020-09-21 13:44:45.831305 2019-08-24 2000\n",
+      "2020-09-21 13:45:15.965332 2019-10-03 2500\n",
       "Done! Games downloaded: 2533\n"
      ]
     }
@@ -354,12 +354,39 @@
    "cell_type": "markdown",
    "source": [
     "# Next Up\n",
-    "Next, we'll start building out our historic data and training the model using XGBoost and LightGBM.\n"
+    "Next, we'll start building out our historic data and training the model using XGBoost and LightGBM."
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump((outcomes,predictions,probabilities), open('baseline.pkl','wb'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
