jeckyll error, seeing if removing TOC fixes it

--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -10,9 +10,9 @@
    },
    "source": [
     "# MLB Training Data\n",
-    "> Part 2: Downloading the data for our baseball predictions\n",
+    "> Part 2: Downloading the data and training the model with XGBoost\n",
     "\n",
-    "- toc: true\n",
+    "- toc: false\n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [baseball, web_scraping, xgboost,brier, accuracy, calibration]\n",
