--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -10,12 +10,12 @@
    },
    "source": [
     "# MLB Training Data\n",
-    "> Part 2: Downloading the data and training the model with XGBoost\n",
+    "> Part 2 - Downloading the data and training the model with XGBoost\n",
     "\n",
-    "- toc: false\n",
+    "- toc: true\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [baseball, web_scraping, xgboost,brier, accuracy, calibration]\n",
+    "- categories: [baseball, web_scraping, xgboost, brier, accuracy, calibration]\n",
     "- image: images/chart-preview.png"
    ]
   },
