--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -356,6 +356,19 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Game DF\n",
+    "This one is where we'll eventually put all of our stats"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "outputs": [
@@ -381,6 +394,16 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Batting DF\n",
+    "Stats about batting, one row per team per game"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -413,19 +436,22 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "    IP    H    R   ER   BB    SO   HR  earned_run_avg  batters_faced  pitches  \\\n0  8.0  9.0  4.0  3.0  2.0   3.0  0.0            3.38           33.0    114.0   \n1  9.0  7.0  3.0  3.0  6.0   9.0  0.0            3.00           39.0    177.0   \n2  8.0  9.0  4.0  4.0  5.0   5.0  0.0            4.50           36.0    144.0   \n3  9.0  5.0  1.0  1.0  5.0  14.0  0.0            1.00           38.0    141.0   \n4  9.0  7.0  3.0  3.0  1.0   7.0  1.0            3.00           36.0    118.0   \n\n   ...  inplay_unk  game_score  inherited_runners  inherited_score  wpa_def  \\\n0  ...         0.0        39.0                2.0              1.0   -0.051   \n1  ...         0.0        70.0                2.0              0.0    0.449   \n2  ...         0.0        48.0                0.0              0.0   -0.069   \n3  ...         0.0        71.0                0.0              0.0    0.431   \n4  ...         0.0        62.0                1.0              1.0    0.366   \n\n   leverage_index_avg  re24_def  is_home_team  team       game_id  \n0                0.74       0.1         False   NYM  KCA201604030  \n1                1.58       1.7          True   KCR  KCA201604030  \n2                0.71      -0.1         False   STL  PIT201604030  \n3                1.27       3.4          True   PIT  PIT201604030  \n4                0.98       1.3         False   TOR  TBA201604030  \n\n[5 rows x 27 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>IP</th>\n      <th>H</th>\n      <th>R</th>\n      <th>ER</th>\n      <th>BB</th>\n      <th>SO</th>\n      <th>HR</th>\n      <th>earned_run_avg</th>\n      <th>batters_faced</th>\n      <th>pitches</th>\n      <th>...</th>\n      <th>inplay_unk</th>\n      <th>game_score</th>\n      <th>inherited_runners</th>\n      <th>inherited_score</th>\n      <th>wpa_def</th>\n      <th>leverage_index_avg</th>\n      <th>re24_def</th>\n      <th>is_home_team</th>\n      <th>team</th>\n      <th>game_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>8.0</td>\n      <td>9.0</td>\n      <td>4.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.38</td>\n      <td>33.0</td>\n      <td>114.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>39.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>-0.051</td>\n      <td>0.74</td>\n      <td>0.1</td>\n      <td>False</td>\n      <td>NYM</td>\n      <td>KCA201604030</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>9.0</td>\n      <td>7.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>6.0</td>\n      <td>9.0</td>\n      <td>0.0</td>\n      <td>3.00</td>\n      <td>39.0</td>\n      <td>177.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>70.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>0.449</td>\n      <td>1.58</td>\n      <td>1.7</td>\n      <td>True</td>\n      <td>KCR</td>\n      <td>KCA201604030</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>8.0</td>\n      <td>9.0</td>\n      <td>4.0</td>\n      <td>4.0</td>\n      <td>5.0</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>4.50</td>\n      <td>36.0</td>\n      <td>144.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>48.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>-0.069</td>\n      <td>0.71</td>\n      <td>-0.1</td>\n      <td>False</td>\n      <td>STL</td>\n      <td>PIT201604030</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>9.0</td>\n      <td>5.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>5.0</td>\n      <td>14.0</td>\n      <td>0.0</td>\n      <td>1.00</td>\n      <td>38.0</td>\n      <td>141.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>71.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.431</td>\n      <td>1.27</td>\n      <td>3.4</td>\n      <td>True</td>\n      <td>PIT</td>\n      <td>PIT201604030</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>9.0</td>\n      <td>7.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>7.0</td>\n      <td>1.0</td>\n      <td>3.00</td>\n      <td>36.0</td>\n      <td>118.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>62.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.366</td>\n      <td>0.98</td>\n      <td>1.3</td>\n      <td>False</td>\n      <td>TOR</td>\n      <td>TBA201604030</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 27 columns</p>\n</div>"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "cell_type": "markdown",
+   "source": [
+    "#### Pitching DF\n",
+    "Team pitching stats, one row per team per game"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "pitching_df = pd.DataFrame(pitching)\n",
     "for k in pitching_df.keys():\n",
@@ -441,19 +467,22 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "    IP    H    R   ER   BB    SO   HR  earned_run_avg  batters_faced  pitches  \\\n0  5.2  8.0  4.0  3.0  2.0   2.0  0.0            4.76           25.0     83.0   \n1  6.0  2.0  0.0  0.0  3.0   5.0  0.0            0.00           22.0    106.0   \n2  6.0  6.0  3.0  3.0  3.0   3.0  0.0            4.50           26.0     96.0   \n3  6.0  3.0  0.0  0.0  5.0  10.0  0.0            0.00           26.0     94.0   \n4  8.0  6.0  3.0  3.0  1.0   5.0  1.0            3.38           32.0     98.0   \n\n   ...  inplay_ld  inplay_unk  game_score  wpa_def  leverage_index_avg  \\\n0  ...        5.0         0.0        39.0   -0.061                0.86   \n1  ...        2.0         0.0        70.0    0.350                0.92   \n2  ...        6.0         0.0        48.0   -0.069                0.90   \n3  ...        0.0         0.0        71.0    0.329                1.52   \n4  ...        5.0         0.0        62.0    0.282                0.92   \n\n   re24_def       name  is_home_team  team       game_id  \n0      -0.4  harvema01         False   NYM  KCA201604030  \n1       3.1  volqued01          True   KCR  KCA201604030  \n2      -0.1  wainwad01         False   STL  PIT201604030  \n3       2.9  liriafr01          True   PIT  PIT201604030  \n4       1.5  stromma01         False   TOR  TBA201604030  \n\n[5 rows x 26 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>IP</th>\n      <th>H</th>\n      <th>R</th>\n      <th>ER</th>\n      <th>BB</th>\n      <th>SO</th>\n      <th>HR</th>\n      <th>earned_run_avg</th>\n      <th>batters_faced</th>\n      <th>pitches</th>\n      <th>...</th>\n      <th>inplay_ld</th>\n      <th>inplay_unk</th>\n      <th>game_score</th>\n      <th>wpa_def</th>\n      <th>leverage_index_avg</th>\n      <th>re24_def</th>\n      <th>name</th>\n      <th>is_home_team</th>\n      <th>team</th>\n      <th>game_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5.2</td>\n      <td>8.0</td>\n      <td>4.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>4.76</td>\n      <td>25.0</td>\n      <td>83.0</td>\n      <td>...</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>39.0</td>\n      <td>-0.061</td>\n      <td>0.86</td>\n      <td>-0.4</td>\n      <td>harvema01</td>\n      <td>False</td>\n      <td>NYM</td>\n      <td>KCA201604030</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>6.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>22.0</td>\n      <td>106.0</td>\n      <td>...</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>70.0</td>\n      <td>0.350</td>\n      <td>0.92</td>\n      <td>3.1</td>\n      <td>volqued01</td>\n      <td>True</td>\n      <td>KCR</td>\n      <td>KCA201604030</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>6.0</td>\n      <td>6.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>4.50</td>\n      <td>26.0</td>\n      <td>96.0</td>\n      <td>...</td>\n      <td>6.0</td>\n      <td>0.0</td>\n      <td>48.0</td>\n      <td>-0.069</td>\n      <td>0.90</td>\n      <td>-0.1</td>\n      <td>wainwad01</td>\n      <td>False</td>\n      <td>STL</td>\n      <td>PIT201604030</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>10.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>26.0</td>\n      <td>94.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>71.0</td>\n      <td>0.329</td>\n      <td>1.52</td>\n      <td>2.9</td>\n      <td>liriafr01</td>\n      <td>True</td>\n      <td>PIT</td>\n      <td>PIT201604030</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>8.0</td>\n      <td>6.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>5.0</td>\n      <td>1.0</td>\n      <td>3.38</td>\n      <td>32.0</td>\n      <td>98.0</td>\n      <td>...</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>62.0</td>\n      <td>0.282</td>\n      <td>0.92</td>\n      <td>1.5</td>\n      <td>stromma01</td>\n      <td>False</td>\n      <td>TOR</td>\n      <td>TBA201604030</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 26 columns</p>\n</div>"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "cell_type": "markdown",
+   "source": [
+    "#### Pitcher DF\n",
+    "Individual pitching stats (starting pitchers only), one row per pitcher per game"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "pitcher_df = pd.DataFrame(pitchers)\n",
     "for k in pitcher_df.keys():\n",
@@ -512,14 +541,18 @@
     "    return df\n",
     "\n",
     "def get_diff_df(df, name, is_pitcher=False):\n",
+    "    #runs for each of the stat dataframes, returns the difference in stats\n",
+    "\n",
+    "    #set up dataframe with time index\n",
     "    df['date'] = pd.to_datetime(df['game_id'].str[3:-1], format=\"%Y%m%d\")\n",
     "    df = df.sort_values(by='date').copy()\n",
-    "    stat_cols = [x for x in df.columns if 'int' in str(df[x].dtype)]\n",
-    "    stat_cols.extend([x for x in df.columns if 'float' in str(df[x].dtype)])\n",
-    "\n",
     "    newindex = df.groupby('date')['date']\\\n",
     "             .apply(lambda x: x + np.arange(x.size).astype(np.timedelta64))\n",
     "    df = df.set_index(newindex).sort_index()\n",
+    "\n",
+    "    # get stat columns\n",
+    "    stat_cols = [x for x in df.columns if 'int' in str(df[x].dtype)]\n",
+    "    stat_cols.extend([x for x in df.columns if 'float' in str(df[x].dtype)])\n",
     "\n",
     "    #add lags\n",
     "    df = add_rolling('5d', df, stat_cols) # this game series\n",
@@ -528,12 +561,12 @@
     "    df = add_rolling('180d', df, stat_cols) # this season\n",
     "    df = add_rolling('730d', df, stat_cols) # 2 years\n",
     "\n",
-    "    # reset stat columns to just the lags\n",
+    "    # reset stat columns to just the lags (removing the original stats)\n",
     "    df.drop(columns=stat_cols, inplace=True)\n",
     "    stat_cols = [x for x in df.columns if 'int' in str(df[x].dtype)]\n",
     "    stat_cols.extend([x for x in df.columns if 'float' in str(df[x].dtype)])\n",
     "\n",
-    "    # shift results\n",
+    "    # shift results so that each row is  a pregame stat\n",
     "    df = df.reset_index(drop=True)\n",
     "    df = df.sort_values(by='date')\n",
     "    for s in stat_cols:\n",
@@ -542,7 +575,7 @@
     "        else:\n",
     "            df[s] = df.groupby('team')[s].shift(1)\n",
     "\n",
-    "    # get diffs\n",
+    "    # calculate differences in pregame stats from home vs. away teams\n",
     "    away_df = df[~df['is_home_team']].copy()\n",
     "    away_df = away_df.set_index('game_id')\n",
     "    away_df = away_df[stat_cols]\n",
@@ -554,7 +587,7 @@
     "    diff_df = home_df.subtract(away_df, fill_value=0)\n",
     "    diff_df = diff_df.reset_index()\n",
     "\n",
-    "    # rename columns\n",
+    "    # clean column names\n",
     "    for s in stat_cols:\n",
     "        diff_df[name + \"_\" + s] = diff_df[s]\n",
     "        diff_df.drop(columns=s, inplace=True)\n",
@@ -887,7 +920,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "That's not terrible for a first run. I think this model has some promise. Let's look at the feature importances just to see which features it's using most."
+    "That's not terrible for a first run. I think this model has some promise. Let's look at the feature importances just to see which features it's using most. It looks like the model likes [RE24](https://thebaseballscholar.com/2017/08/14/sabermetrics-101-re24/), and it likes the longer lags: 180day and 730day."
    ],
    "metadata": {
     "collapsed": false,
