--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -920,7 +920,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "That's not terrible for a first run. I think this model has some promise. Let's look at the feature importances just to see which features it's using most. It looks like the model likes [RE24](https://thebaseballscholar.com/2017/08/14/sabermetrics-101-re24/), and it likes the longer lags: 180day and 730day."
+    "That's not terrible for a first run. I think this model has some promise. Let's look at the feature importances just to see which features it's using most. It looks like the model likes [RE24](https://thebaseballscholar.com/2017/08/14/sabermetrics-101-re24/), and it likes the longer lags: 180day & 730day."
    ],
    "metadata": {
     "collapsed": false,
