--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# load saved work\n",
@@ -287,13 +287,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "(10641, 21282, 21282, 91664)"
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Game DF\n",
+    "**Game DF**\n",
+    "\n",
     "This one is where we'll eventually put all of our stats"
    ],
    "metadata": {
@@ -370,14 +371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "        game_id away_team_abbr home_team_abbr                date  \\\n0  KCA201604030            NYM            KCR 2016-04-03 19:38:00   \n1  PIT201604030            STL            PIT 2016-04-03 13:15:00   \n2  TBA201604030            TOR            TBR 2016-04-03 16:09:00   \n3  ANA201604040            CHC            LAA 2016-04-04 19:08:00   \n4  ARI201604040            COL            ARI 2016-04-04 18:42:00   \n\n   home_team_win  \n0           True  \n1           True  \n2          False  \n3          False  \n4          False  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>game_id</th>\n      <th>away_team_abbr</th>\n      <th>home_team_abbr</th>\n      <th>date</th>\n      <th>home_team_win</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>KCA201604030</td>\n      <td>NYM</td>\n      <td>KCR</td>\n      <td>2016-04-03 19:38:00</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>PIT201604030</td>\n      <td>STL</td>\n      <td>PIT</td>\n      <td>2016-04-03 13:15:00</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>TBA201604030</td>\n      <td>TOR</td>\n      <td>TBR</td>\n      <td>2016-04-03 16:09:00</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ANA201604040</td>\n      <td>CHC</td>\n      <td>LAA</td>\n      <td>2016-04-04 19:08:00</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ARI201604040</td>\n      <td>COL</td>\n      <td>ARI</td>\n      <td>2016-04-04 18:42:00</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +400,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Batting DF\n",
+    "**Batting DF**\n",
+    "\n",
     "Stats about batting, one row per team per game"
    ],
    "metadata": {
@@ -408,14 +410,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "     AB    R    H  RBI   BB    SO    PA  batting_avg  onbase_perc  \\\n0  33.0  3.0  7.0  3.0  6.0   9.0  39.0        0.212        0.333   \n1  30.0  4.0  9.0  4.0  2.0   3.0  33.0        0.300        0.333   \n2  32.0  1.0  5.0  1.0  5.0  14.0  38.0        0.156        0.289   \n3  28.0  4.0  9.0  4.0  5.0   5.0  36.0        0.321        0.429   \n4  35.0  5.0  7.0  5.0  3.0  16.0  38.0        0.200        0.263   \n\n   slugging_perc  ...  wpa_bat  leverage_index_avg  wpa_bat_pos  wpa_bat_neg  \\\n0          0.242  ...   -0.449                1.58        0.746       -1.195   \n1          0.300  ...    0.052                0.74        0.488       -0.434   \n2          0.156  ...   -0.431                1.27        0.504       -0.935   \n3          0.464  ...    0.070                0.71        0.466       -0.394   \n4          0.314  ...    0.134                0.76        0.558       -0.423   \n\n   re24_bat    PO     A  is_home_team  team       game_id  \n0      -1.7  24.0  15.0         False   NYM  KCA201604030  \n1      -0.1  27.0  13.0          True   KCR  KCA201604030  \n2      -3.4  24.0  11.0         False   STL  PIT201604030  \n3       0.1  27.0   8.0          True   PIT  PIT201604030  \n4       0.7  27.0  15.0         False   TOR  TBA201604030  \n\n[5 rows x 23 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>AB</th>\n      <th>R</th>\n      <th>H</th>\n      <th>RBI</th>\n      <th>BB</th>\n      <th>SO</th>\n      <th>PA</th>\n      <th>batting_avg</th>\n      <th>onbase_perc</th>\n      <th>slugging_perc</th>\n      <th>...</th>\n      <th>wpa_bat</th>\n      <th>leverage_index_avg</th>\n      <th>wpa_bat_pos</th>\n      <th>wpa_bat_neg</th>\n      <th>re24_bat</th>\n      <th>PO</th>\n      <th>A</th>\n      <th>is_home_team</th>\n      <th>team</th>\n      <th>game_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>33.0</td>\n      <td>3.0</td>\n      <td>7.0</td>\n      <td>3.0</td>\n      <td>6.0</td>\n      <td>9.0</td>\n      <td>39.0</td>\n      <td>0.212</td>\n      <td>0.333</td>\n      <td>0.242</td>\n      <td>...</td>\n      <td>-0.449</td>\n      <td>1.58</td>\n      <td>0.746</td>\n      <td>-1.195</td>\n      <td>-1.7</td>\n      <td>24.0</td>\n      <td>15.0</td>\n      <td>False</td>\n      <td>NYM</td>\n      <td>KCA201604030</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>30.0</td>\n      <td>4.0</td>\n      <td>9.0</td>\n      <td>4.0</td>\n      <td>2.0</td>\n      <td>3.0</td>\n      <td>33.0</td>\n      <td>0.300</td>\n      <td>0.333</td>\n      <td>0.300</td>\n      <td>...</td>\n      <td>0.052</td>\n      <td>0.74</td>\n      <td>0.488</td>\n      <td>-0.434</td>\n      <td>-0.1</td>\n      <td>27.0</td>\n      <td>13.0</td>\n      <td>True</td>\n      <td>KCR</td>\n      <td>KCA201604030</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>32.0</td>\n      <td>1.0</td>\n      <td>5.0</td>\n      <td>1.0</td>\n      <td>5.0</td>\n      <td>14.0</td>\n      <td>38.0</td>\n      <td>0.156</td>\n      <td>0.289</td>\n      <td>0.156</td>\n      <td>...</td>\n      <td>-0.431</td>\n      <td>1.27</td>\n      <td>0.504</td>\n      <td>-0.935</td>\n      <td>-3.4</td>\n      <td>24.0</td>\n      <td>11.0</td>\n      <td>False</td>\n      <td>STL</td>\n      <td>PIT201604030</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>28.0</td>\n      <td>4.0</td>\n      <td>9.0</td>\n      <td>4.0</td>\n      <td>5.0</td>\n      <td>5.0</td>\n      <td>36.0</td>\n      <td>0.321</td>\n      <td>0.429</td>\n      <td>0.464</td>\n      <td>...</td>\n      <td>0.070</td>\n      <td>0.71</td>\n      <td>0.466</td>\n      <td>-0.394</td>\n      <td>0.1</td>\n      <td>27.0</td>\n      <td>8.0</td>\n      <td>True</td>\n      <td>PIT</td>\n      <td>PIT201604030</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>35.0</td>\n      <td>5.0</td>\n      <td>7.0</td>\n      <td>5.0</td>\n      <td>3.0</td>\n      <td>16.0</td>\n      <td>38.0</td>\n      <td>0.200</td>\n      <td>0.263</td>\n      <td>0.314</td>\n      <td>...</td>\n      <td>0.134</td>\n      <td>0.76</td>\n      <td>0.558</td>\n      <td>-0.423</td>\n      <td>0.7</td>\n      <td>27.0</td>\n      <td>15.0</td>\n      <td>False</td>\n      <td>TOR</td>\n      <td>TBA201604030</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 23 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +440,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Pitching DF\n",
+    "**Pitching DF**\n",
+    "\n",
     "Team pitching stats, one row per team per game"
    ],
    "metadata": {
@@ -450,8 +453,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    IP    H    R   ER   BB    SO   HR  earned_run_avg  batters_faced  pitches  \\\n0  8.0  9.0  4.0  3.0  2.0   3.0  0.0            3.38           33.0    114.0   \n1  9.0  7.0  3.0  3.0  6.0   9.0  0.0            3.00           39.0    177.0   \n2  8.0  9.0  4.0  4.0  5.0   5.0  0.0            4.50           36.0    144.0   \n3  9.0  5.0  1.0  1.0  5.0  14.0  0.0            1.00           38.0    141.0   \n4  9.0  7.0  3.0  3.0  1.0   7.0  1.0            3.00           36.0    118.0   \n\n   ...  inplay_unk  game_score  inherited_runners  inherited_score  wpa_def  \\\n0  ...         0.0        39.0                2.0              1.0   -0.051   \n1  ...         0.0        70.0                2.0              0.0    0.449   \n2  ...         0.0        48.0                0.0              0.0   -0.069   \n3  ...         0.0        71.0                0.0              0.0    0.431   \n4  ...         0.0        62.0                1.0              1.0    0.366   \n\n   leverage_index_avg  re24_def  is_home_team  team       game_id  \n0                0.74       0.1         False   NYM  KCA201604030  \n1                1.58       1.7          True   KCR  KCA201604030  \n2                0.71      -0.1         False   STL  PIT201604030  \n3                1.27       3.4          True   PIT  PIT201604030  \n4                0.98       1.3         False   TOR  TBA201604030  \n\n[5 rows x 27 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>IP</th>\n      <th>H</th>\n      <th>R</th>\n      <th>ER</th>\n      <th>BB</th>\n      <th>SO</th>\n      <th>HR</th>\n      <th>earned_run_avg</th>\n      <th>batters_faced</th>\n      <th>pitches</th>\n      <th>...</th>\n      <th>inplay_unk</th>\n      <th>game_score</th>\n      <th>inherited_runners</th>\n      <th>inherited_score</th>\n      <th>wpa_def</th>\n      <th>leverage_index_avg</th>\n      <th>re24_def</th>\n      <th>is_home_team</th>\n      <th>team</th>\n      <th>game_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>8.0</td>\n      <td>9.0</td>\n      <td>4.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>3.38</td>\n      <td>33.0</td>\n      <td>114.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>39.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>-0.051</td>\n      <td>0.74</td>\n      <td>0.1</td>\n      <td>False</td>\n      <td>NYM</td>\n      <td>KCA201604030</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>9.0</td>\n      <td>7.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>6.0</td>\n      <td>9.0</td>\n      <td>0.0</td>\n      <td>3.00</td>\n      <td>39.0</td>\n      <td>177.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>70.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>0.449</td>\n      <td>1.58</td>\n      <td>1.7</td>\n      <td>True</td>\n      <td>KCR</td>\n      <td>KCA201604030</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>8.0</td>\n      <td>9.0</td>\n      <td>4.0</td>\n      <td>4.0</td>\n      <td>5.0</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>4.50</td>\n      <td>36.0</td>\n      <td>144.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>48.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>-0.069</td>\n      <td>0.71</td>\n      <td>-0.1</td>\n      <td>False</td>\n      <td>STL</td>\n      <td>PIT201604030</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>9.0</td>\n      <td>5.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>5.0</td>\n      <td>14.0</td>\n      <td>0.0</td>\n      <td>1.00</td>\n      <td>38.0</td>\n      <td>141.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>71.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.431</td>\n      <td>1.27</td>\n      <td>3.4</td>\n      <td>True</td>\n      <td>PIT</td>\n      <td>PIT201604030</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>9.0</td>\n      <td>7.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>7.0</td>\n      <td>1.0</td>\n      <td>3.00</td>\n      <td>36.0</td>\n      <td>118.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>62.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.366</td>\n      <td>0.98</td>\n      <td>1.3</td>\n      <td>False</td>\n      <td>TOR</td>\n      <td>TBA201604030</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 27 columns</p>\n</div>"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pitching_df = pd.DataFrame(pitching)\n",
     "for k in pitching_df.keys():\n",
@@ -469,7 +482,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Pitcher DF\n",
+    "**Pitcher DF**\n",
+    "\n",
     "Individual pitching stats (starting pitchers only), one row per pitcher per game"
    ],
    "metadata": {
@@ -481,8 +495,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    IP    H    R   ER   BB    SO   HR  earned_run_avg  batters_faced  pitches  \\\n0  5.2  8.0  4.0  3.0  2.0   2.0  0.0            4.76           25.0     83.0   \n1  6.0  2.0  0.0  0.0  3.0   5.0  0.0            0.00           22.0    106.0   \n2  6.0  6.0  3.0  3.0  3.0   3.0  0.0            4.50           26.0     96.0   \n3  6.0  3.0  0.0  0.0  5.0  10.0  0.0            0.00           26.0     94.0   \n4  8.0  6.0  3.0  3.0  1.0   5.0  1.0            3.38           32.0     98.0   \n\n   ...  inplay_ld  inplay_unk  game_score  wpa_def  leverage_index_avg  \\\n0  ...        5.0         0.0        39.0   -0.061                0.86   \n1  ...        2.0         0.0        70.0    0.350                0.92   \n2  ...        6.0         0.0        48.0   -0.069                0.90   \n3  ...        0.0         0.0        71.0    0.329                1.52   \n4  ...        5.0         0.0        62.0    0.282                0.92   \n\n   re24_def       name  is_home_team  team       game_id  \n0      -0.4  harvema01         False   NYM  KCA201604030  \n1       3.1  volqued01          True   KCR  KCA201604030  \n2      -0.1  wainwad01         False   STL  PIT201604030  \n3       2.9  liriafr01          True   PIT  PIT201604030  \n4       1.5  stromma01         False   TOR  TBA201604030  \n\n[5 rows x 26 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>IP</th>\n      <th>H</th>\n      <th>R</th>\n      <th>ER</th>\n      <th>BB</th>\n      <th>SO</th>\n      <th>HR</th>\n      <th>earned_run_avg</th>\n      <th>batters_faced</th>\n      <th>pitches</th>\n      <th>...</th>\n      <th>inplay_ld</th>\n      <th>inplay_unk</th>\n      <th>game_score</th>\n      <th>wpa_def</th>\n      <th>leverage_index_avg</th>\n      <th>re24_def</th>\n      <th>name</th>\n      <th>is_home_team</th>\n      <th>team</th>\n      <th>game_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5.2</td>\n      <td>8.0</td>\n      <td>4.0</td>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>4.76</td>\n      <td>25.0</td>\n      <td>83.0</td>\n      <td>...</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>39.0</td>\n      <td>-0.061</td>\n      <td>0.86</td>\n      <td>-0.4</td>\n      <td>harvema01</td>\n      <td>False</td>\n      <td>NYM</td>\n      <td>KCA201604030</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>6.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>22.0</td>\n      <td>106.0</td>\n      <td>...</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>70.0</td>\n      <td>0.350</td>\n      <td>0.92</td>\n      <td>3.1</td>\n      <td>volqued01</td>\n      <td>True</td>\n      <td>KCR</td>\n      <td>KCA201604030</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>6.0</td>\n      <td>6.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>4.50</td>\n      <td>26.0</td>\n      <td>96.0</td>\n      <td>...</td>\n      <td>6.0</td>\n      <td>0.0</td>\n      <td>48.0</td>\n      <td>-0.069</td>\n      <td>0.90</td>\n      <td>-0.1</td>\n      <td>wainwad01</td>\n      <td>False</td>\n      <td>STL</td>\n      <td>PIT201604030</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>10.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>26.0</td>\n      <td>94.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>71.0</td>\n      <td>0.329</td>\n      <td>1.52</td>\n      <td>2.9</td>\n      <td>liriafr01</td>\n      <td>True</td>\n      <td>PIT</td>\n      <td>PIT201604030</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>8.0</td>\n      <td>6.0</td>\n      <td>3.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>5.0</td>\n      <td>1.0</td>\n      <td>3.38</td>\n      <td>32.0</td>\n      <td>98.0</td>\n      <td>...</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>62.0</td>\n      <td>0.282</td>\n      <td>0.92</td>\n      <td>1.5</td>\n      <td>stromma01</td>\n      <td>False</td>\n      <td>TOR</td>\n      <td>TBA201604030</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 26 columns</p>\n</div>"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pitcher_df = pd.DataFrame(pitchers)\n",
     "for k in pitcher_df.keys():\n",
@@ -524,11 +548,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# here are the routines to help execute the above algorithm.\n",
-    "# The code is a little dense. Sorry if it's hard to follow.\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -603,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -617,12 +640,13 @@
      "data": {
       "text/plain": "(10641, 995)"
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#\n",
     "# this cell calculates the differences for each datafraame of stats\n",
     "# then merges those differences back into the main df\n",
     "\n",
