pull comments our of cells and into markdown

--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -235,6 +235,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Let's save our work, so we don't have to do that download again."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "outputs": [],
@@ -260,7 +269,9 @@
     "* **game_df**: This will be our main dataframe that will eventually get fed into the model\n",
     "* **pitching_df**: This holds the pitching data, two rows per game (one for how team, one for away team). It's constructed this way because we need to be able to group our data per team.\n",
     "* **batting_df**: Same as above but for batting stats.\n",
-    "* **pitcher_df**: This is the same as pitching_df, but has one row per player. We'll derive our starting pitcher stats from here."
+    "* **pitcher_df**: This is the same as pitching_df, but has one row per player. We'll derive our starting pitcher stats from here.\n",
+    "\n",
+    "First, let's load our saved work."
    ],
    "metadata": {
     "collapsed": false,
@@ -274,7 +285,6 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "# load saved work\n",
     "import pickle\n",
     "game_data = pickle.load(open('game_data.pkl', 'rb'))"
    ],
@@ -537,7 +547,9 @@
     "    then shift the data so each row contains pre-game statistics\n",
     "    then take the difference of the opposing team\n",
     "```\n",
-    "That result is put into the game_df with a name like \"5day_R_Avg\", or \"45Day_IP_StDev\". The other dfs are done at that point\n"
+    "That result is put into the game_df with a name like \"5day_R_Avg\", or \"45Day_IP_StDev\". The other dfs are done at that point.\n",
+    "\n",
+    "Below are the routines to help execute the above algorithm.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -551,8 +563,6 @@
    "execution_count": 15,
    "outputs": [],
    "source": [
-    "# here are the routines to help execute the above algorithm.\n",
-    "\n",
     "import numpy as np\n",
     "\n",
     "def add_rolling(period, df, stat_columns):\n",
@@ -625,6 +635,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Below calculates the differences for each datafraame of stats, then merges those differences back into the main df."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "outputs": [
@@ -646,10 +668,6 @@
     }
    ],
    "source": [
-    "#\n",
-    "# this cell calculates the differences for each datafraame of stats\n",
-    "# then merges those differences back into the main df\n",
-    "\n",
     "df = game_df\n",
     "\n",
     "df = pd.merge(left=df, right = get_diff_df(batting_df, 'batting'),\n",
@@ -672,11 +690,19 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Below we add some datetime features, as i generally do with time-series data like this."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "#  add some datetime features\n",
     "df['season'] = df['date'].dt.year\n",
     "df['month']=df['date'].dt.month\n",
     "df['week_num'] = pd.to_numeric(df['date'].dt.isocalendar().week, errors='coerce')\n",
@@ -691,11 +717,22 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Save our work"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "# save our work\n",
     "import pickle\n",
     "pickle.dump(df, open('dataframe.pkl', 'wb'))"
    ],
@@ -710,7 +747,9 @@
    "cell_type": "markdown",
    "source": [
     "## Train the Model\n",
-    "Finally, we get to train the model! This is just going to be a crude first run to make sure everything is working properly. We'll add the cleverest bits in the next blog post."
+    "Finally, we get to train the model! This is just going to be a crude first run to make sure everything is working properly. We'll add the cleverest bits in the next blog post.\n",
+    "\n",
+    "First, load our saved saved work"
    ],
    "metadata": {
     "collapsed": false,
@@ -721,13 +760,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "# load saved work\n",
     "import pickle\n",
     "df = pickle.load(open('dataframe.pkl', 'rb'))\n",
-    "df.drop(columns='week_num', inplace=True)"
+    "df.drop(columns='week_num', inplace=True)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -737,11 +775,19 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Target encoding for remaining string features"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "#target encoding for remaining string features\n",
     "encode_me = [x for x in df.keys() if 'object' in str(df[x].dtype)]\n",
     "for x in encode_me:\n",
     "    df[x] = df.groupby(x)['home_team_win'].apply(lambda x:x.rolling(180).mean()).shift(1)\n"
@@ -754,26 +800,23 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Create our test, train and validate data sets"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "outputs": [],
    "source": [
     "df = df.sort_values(by='date').copy().reset_index(drop=True)\n",
     "X = df.drop(columns=['home_team_win', 'game_id'])\n",
-    "y = df.home_team_win"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
+    "y = df.home_team_win\n",
+    "\n",
     "X_train = X[:-1000]\n",
     "y_train = y[:-1000]\n",
     "X_valid = X[-1000:-500]\n",
@@ -786,6 +829,15 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Here's the training bit"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -863,6 +915,15 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "And our results..."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -947,10 +1008,7 @@
     "That's not terrible for a first run. I think this model has some promise. Let's look at the feature importances just to see which features it's using most. It looks like the model likes [RE24](https://thebaseballscholar.com/2017/08/14/sabermetrics-101-re24/), and it likes the longer lags: 180day & 730day."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
