expand closing commentary

--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -1005,7 +1005,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "That's not terrible for a first run. I think this model has some promise. Let's look at the feature importances just to see which features it's using most. It looks like the model likes [RE24](https://thebaseballscholar.com/2017/08/14/sabermetrics-101-re24/), and it likes the longer lags: 180day & 730day."
+    "That's not terrible for a first run - 57% accuracy for our model vs. 60% for the casinos. We're only off by 3% and we still have our secret features and model optimization to do.\n",
+    "\n",
+    "Our calibration is also worse, but again it's not terrible for our first run. I like to think of it in terms of [forecasting skill](https://en.wikipedia.org/wiki/Forecast_skill). Our calibration skill is 2.8% worse than the casino's, as measured by our brier loss function.\n",
+    "\n",
+    "This model has some promise. Let's look at the feature importances just to see which features it's using most. It looks like the model likes [RE24](https://thebaseballscholar.com/2017/08/14/sabermetrics-101-re24/), and it likes the longer lags: 180day & 730day."
    ],
    "metadata": {
     "collapsed": false
