--- a/_notebooks/2020-09-20-baseball_project.ipynb
+++ b/_notebooks/2020-09-20-baseball_project.ipynb
@@ -19,9 +19,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Baseball isn’t associated with good memories for me. I wasn’t very good at it, always hitting foul balls in little league. My parents eventually figured out I needed glasses, but not before I developed a mild disdain for the sport. So it’s with great surprise that I find myself spending so much time thinking about it. Even more so when I make a bet and start cheering for a team. It’s amazing what having some skin in the game will do for your interest level.\n",
+    "This is the second season I've been using machine learning to  make predictions and bets. Last year I made good predictions, but I hadn't figured out how to size my bets so I didn't make any money. This year I feel like I have a good strategy for this and it was solidly profitable. \n",
     "\n",
-    "This is the first in a blog series, written in jupyter notebooks, which will show you how to build a program that predicts the outcome of MLB games. We'll be using our web scraping and machine learning skills to build a model that outperforms the casino's sports books.\n",
+    "I'm going to share what I do in this series of blog posts. Hopefully I'll get some feedback that will help me improve. If not, at least it might help others get started. \n",
+    "\n",
+    "This blog series is written in jupyter notebooks, which will show you how to build a program that predicts the outcome of MLB games. We'll be using our web scraping and machine learning skills to build a model that *significantly outperforms the casino's sports books*. \n",
+    "\n",
+    "**Each blog post, including this one, is executable. Use the buttons at the top to run the code on Binder of Colab and get fresh results for yourself.** You can also download it from Github to run the notebook locally. \n",
     "\n",
     "> Important: Web scraping is dependant on other people's web pages. If they change their site, this blog's code will break. Don't expect the code presented here to work forever."
    ],
