note on target encoding

--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -777,7 +777,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Target encoding for remaining string features"
+    "Target encoding for remaining string features. This will effectively create a 180-day win% value in each of the team name columns."
    ],
    "metadata": {
     "collapsed": false
@@ -1056,7 +1056,7 @@
    "cell_type": "markdown",
    "source": [
     "## Next Up\n",
-    "In part 3, we're going to add team power rankings and casino odds to the dataset to improve the results further!\n"
+    "In Part 3, we're going to add team power rankings and casino odds to the dataset to improve the results further!\n"
    ],
    "metadata": {
     "collapsed": false,
