--- a/_notebooks/2020-09-20-baseball_project.ipynb
+++ b/_notebooks/2020-09-20-baseball_project.ipynb
@@ -103,11 +103,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-09-21 13:43:11.235271 2019-05-02 500\n",
-      "2020-09-21 13:43:48.030736 2019-06-08 1000\n",
-      "2020-09-21 13:44:16.474179 2019-07-18 1500\n",
-      "2020-09-21 13:44:45.831305 2019-08-24 2000\n",
-      "2020-09-21 13:45:15.965332 2019-10-03 2500\n",
+      "2020-09-22 08:22:10.026747 2019-05-02 500\n",
+      "2020-09-22 08:22:39.216218 2019-06-08 1000\n",
+      "2020-09-22 08:23:08.537133 2019-07-18 1500\n",
+      "2020-09-22 08:23:37.863950 2019-08-24 2000\n",
+      "2020-09-22 08:24:06.836592 2019-10-03 2500\n",
       "Done! Games downloaded: 2533\n"
      ]
     }
@@ -345,12 +345,29 @@
     "\n",
     "The histogram below shows what portion of the games fall into each bin. We see a slight predicted advantage to the home team, with more than 50% of the observations above the 50% mark. Otherwise it looks pretty normally distributed.\n",
     "\n",
-    "Above, I said the reliability curve looks highly calibrated. If we are to judge our own efforts against the sportsbook, we can't just be eyeballing this graph all the time. A metric would be nice. One metric that is suited for calibration measurement is the [Brier Score](https://en.wikipedia.org/wiki/Brier_score), which I'll be using to measure the model effectiveness going forward. Getting a model that scores less than 0.2358 is the target."
+    "Above, I said the reliability curve looks highly calibrated. If we are to judge our own efforts against the sportsbook, we can't just be eyeballing this graph all the time. A metric would be nice. One metric that is suited for calibration measurement is the [Brier Score](https://en.wikipedia.org/wiki/Brier_score), which I'll be using to measure the model effectiveness going forward. **Getting a model that scores less than 0.2358 is the target for our efforts.**\n",
+    "\n",
+    "Before we go, we should save the files for our baseline..."
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump((outcomes,predictions, probabilities), open('baseline.pkl','wb'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
@@ -369,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [],
    "metadata": {
