note about saving your files

--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -237,7 +237,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Let's save our work, so we don't have to do that download again."
+    "Let's save our work, so we don't have to do that download again.\n",
+    "> Important: We will be using the files saved in subsequent blog posts. Be sure to save them locally if you run this notebook online."
    ],
    "metadata": {
     "collapsed": false
