note about saving your files

--- a/_notebooks/2020-09-20-baseball_project.ipynb
+++ b/_notebooks/2020-09-20-baseball_project.ipynb
@@ -347,7 +347,8 @@
     "\n",
     "Above, I said the reliability curve looks highly calibrated. If we are to judge our own efforts against the sportsbook, we can't just be eyeballing this graph all the time. A metric would be nice. One metric that is suited for calibration measurement is the [Brier Score](https://en.wikipedia.org/wiki/Brier_score), which I'll be using to measure the model effectiveness going forward. **Getting a model that scores less than 0.2358 is the target for our efforts.**\n",
     "\n",
-    "Before we go, we should save the files for our baseline..."
+    "Before we go, we should save the files for our baseline...\n",
+    "> Important: We will be using the files saved in subsequent blog posts. Be sure to save them locally if you run this notebook online."
    ],
    "metadata": {
     "collapsed": false,
