--- a/_notebooks/2020-09-20-baseball_project.ipynb
+++ b/_notebooks/2020-09-20-baseball_project.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -97,17 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-09-22 08:22:10.026747 2019-05-02 500\n",
-      "2020-09-22 08:22:39.216218 2019-06-08 1000\n",
-      "2020-09-22 08:23:08.537133 2019-07-18 1500\n",
-      "2020-09-22 08:23:37.863950 2019-08-24 2000\n",
-      "2020-09-22 08:24:06.836592 2019-10-03 2500\n",
+      "2020-09-22 10:18:28.135002 2019-05-02 500\n",
+      "2020-09-22 10:18:56.497463 2019-06-08 1000\n",
+      "2020-09-22 10:19:23.908988 2019-07-18 1500\n",
+      "2020-09-22 10:19:51.687110 2019-08-24 2000\n",
+      "2020-09-22 10:20:19.900455 2019-10-03 2500\n",
       "Done! Games downloaded: 2533\n"
      ]
     }
@@ -161,13 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "{'home_moneyline': '-155',\n 'date': '2019-03-20 05:35:00',\n 'home_score': '7',\n 'away_score': '9'}"
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,32 @@
   {
    "cell_type": "markdown",
    "source": [
-    "That would have been a pretty good payout if you bet on the away team.\n",
+    "That would have been a pretty good payout if you bet on the away team. Let's save our data so we don't need to keep downloading it.\n",
+    "\n",
+    "> Important: We will be using the files saved in subsequent blog posts. Be sure to save them locally if you run this notebook online."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(game_data, open('covers_data.pkl','wb'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Sportsbook Accuracy\n",
     "Let's see how the sportsbook did in all the games we just downloaded."
    ],
@@ -195,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -270,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -347,8 +372,7 @@
     "\n",
     "Above, I said the reliability curve looks highly calibrated. If we are to judge our own efforts against the sportsbook, we can't just be eyeballing this graph all the time. A metric would be nice. One metric that is suited for calibration measurement is the [Brier Score](https://en.wikipedia.org/wiki/Brier_score), which I'll be using to measure the model effectiveness going forward. **Getting a model that scores less than 0.2358 is the target for our efforts.**\n",
     "\n",
-    "Before we go, we should save the files for our baseline...\n",
-    "> Important: We will be using the files saved in subsequent blog posts. Be sure to save them locally if you run this notebook online."
+    "Before we go, we should save the files for our baseline..."
    ],
    "metadata": {
     "collapsed": false,
@@ -359,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "import pickle\n",
