--- a/_notebooks/2020-09-20-baseball_project.ipynb
+++ b/_notebooks/2020-09-20-baseball_project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# MLB Baseball Predictions\n",
-    "> Introducing the baseball betting project.\n",
+    "> Introducing the baseball betting project and setting a baseline.\n",
     "\n",
     "- toc: false\n",
     "- badges: true\n",
