--- a/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
+++ b/_notebooks/2020-09-21-MLB Part2 First Model.ipynb
@@ -15,7 +15,7 @@
     "- toc: true\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [baseball, web_scraping, xgboost, brier, accuracy, calibration]\n",
+    "- categories: [baseball, webscraping, xgboost, brier, accuracy, calibration]\n",
     "- image: images/chart-preview.png"
    ]
   },
