expand closing comments

--- a/_notebooks/2020-09-22-power rankings and casino odds.ipynb
+++ b/_notebooks/2020-09-22-power rankings and casino odds.ipynb
@@ -911,7 +911,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now we're talking. Our accuracy in our test data is 0.6% better than the oddsmakers and our calibration is virtually the same.\n",
+    "Now we're talking. Our accuracy in our test data is 0.6% better than the oddsmakers and our calibration is virtually the same. It's a concern that to get these results, I needed to set the max depth to 1. That is very low, and implies that we are susceptible to overfitting. One way to fix that is to get more data...\n",
     "\n",
     "\n",
     "## Next up\n",
