--- a/_notebooks/2020-09-24-model optimization.ipynb
+++ b/_notebooks/2020-09-24-model optimization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# MLB Model Optimization\n",
-    "> Part 4 - Improving our model with hyperparameter optimization & more data\n",
+    "> Part 4 - Solidly outperforming the casinos after hyperparameter optimization & more data\n",
     "\n",
     "- toc: false\n",
     "- badges: true\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In Part 3, our model was already performing better than the casino's oddsmakers, but it was only 0.6% better in accuracy and calibration was at parity. In this notebook, we'll get those numbers higher by some optimization of the hyperparameters and getting more data.\n",
+    "In Part 3, our model was already performing better than the casino's oddsmakers, but it was only 0.6% better in accuracy and calibration was at parity. In this notebook, we'll get those numbers higher by doing some optimization of the hyperparameters and getting more data.\n",
     "\n",
     "## Get More Data\n",
     "This is key to solving the overfitting problem we saw in Part 3. XGBoost wanting a low `max_depth` feels like a big deal to me, so let's solve it. I think of overfitting as a problem of either too many features or not enough data. I really love all the fancy and clever features we've made, so let's get more data.\n",
@@ -384,7 +384,6 @@
     }
    ],
    "source": [
-    "#.606\n",
     "params = {\n",
     "    'colsample_bytree':.7,\n",
     "    'learning_rate':.03,\n",
@@ -416,7 +415,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "I'm pretty happy with this. We've got a model that >2% better than the casino's and just as well calibrated. The last thing I want to check is how closely our predictions are correlated to the casino's. The lower the correlation, the more bets we'll get to place."
+    "I get pretty obsessive about hyperparameter adjustments. It's like a little game that I can't stop playing. I am just going to stop. This is good.\n",
+    "\n",
+    " We've got a model that >2% better than the casino's and just as well calibrated. The last thing I want to check is how closely our predictions are correlated to the casino's. The lower the correlation, the more bets we'll get to place."
    ],
    "metadata": {
     "collapsed": false,
